# low_level_programming

./: CMakeLists.txt  Makefile  README.md  README_BACKUP_94275.md  README_REMOTE_94275.md  build  build.sh  build_debug.sh  build_execute.sh  colon.inc  dict.asm  dict.inc  lib.asm  lib.inc  main.asm  word.inc
include/: mem.h  mem_internals.h  test.h
solution/include/: abstract_image.h  bpm_image.h  image_transformation.h  utils.h
solution/src/: abstract_image.c  abstract_image.h  bpm_image.c  bpm_image.h  image_transformation.c  image_transformation.h  main.c  utils.c
src/: main.c  mem.c  mem_debug.c  test.c
src/include/: mem.h  test.h
src/src/: main.c  mem.c
src/tester/tests/: alloc_region.c  grow_heap.c
test/: main
